--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="third-container">
       <div id="contact"></div>
       <div class = row>
-        <div class="col-md-5">
+        <div class="col-md-6">
         <form>
           <div class="mb-3">
             <label for="name" class="form-label">Your name</label>
@@ -89,8 +89,8 @@
         </form>
 
       </div>
-      <div class="col-md-7">
-        <img src="./contact.jpg" class="img-fluid" alt="" > 
+      <div class="col-md-6">
+        <!-- <img src="./contact.jpg" class="img-fluid">  -->
         
       </div>
     </div>
