adding 6 boxes to grid

--- a/grid.html
+++ b/grid.html
@@ -9,6 +9,18 @@
 </head>
 <body>
     
+    <main>
+
+        <div id="prePrimary">PP</div>
+        <div id="yearOne">1</div>
+        <div id="yearTwo">2</div>
+        <div id="yearThree">3</div>
+        <div id="yearFour">4</div>
+        <div id="yearFive">5</div>
+        <div id="yearSix">6</div>
+
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>   
 </body>
 </html>
